# ddev-gui

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
openspec/changes/ddev-gui-mvp/: design.md  proposal.md  tasks.md
openspec/changes/ddev-gui-mvp/specs/app-packaging/: spec.md
openspec/changes/ddev-gui-mvp/specs/ddev-integration/: spec.md
openspec/changes/ddev-gui-mvp/specs/desktop-notifications/: spec.md
openspec/changes/ddev-gui-mvp/specs/project-dashboard/: spec.md
openspec/changes/ddev-gui-mvp/specs/tray-indicator/: spec.md
src/: ddev.ts  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  ddev.rs  lib.rs  main.rs  prefs.rs  tray.rs
src-tauri/src/testdata/: describe.json  list.json
