[package]
name = "ddev-gui"
version = "0.1.0"
description = "A lightweight Linux desktop GUI and status-bar indicator for managing DDEV projects"
authors = ["DDEV GUI contributors"]
edition = "2021"
rust-version = "1.77"

# The library that the binary and tests share. Named distinctly so it does not
# collide with the binary on Windows (Tauri convention).
[lib]
name = "ddev_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[features]
# Enabled by Tauri tooling for production builds.
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
